# rishi-monorepo

./: .gitignore  app.json  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  deploy-worker.yml  release-desktop.yml  release-mobile.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md
.planning/research/: AUTH-AND-AUDIO.md  BOOK-RENDERING.md  ON-DEVICE-ML.md  SUMMARY.md  SYNC-ARCHITECTURE.md
apps/main/: .gitignore  AUDIO_ERROR_DEBUGGING.md  DEVELOPERS.md  EPUB_RENDERING_EXPLAINED.md  LICENSE  README.md  audio.sh  bun.lockb  components.json  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.browser.config.ts  vitest.config.ts
apps/main/src-tauri/: Cargo.toml  rishi.db  tauri.conf.json
apps/main/src-tauri/capabilities/: default.json
apps/main/src-tauri/icons/: icon.icns
apps/main/src-tauri/migrations/2025-12-01-135707-0000_create_books/: up.sql
apps/main/src-tauri/migrations/2025-12-01-140457-0000_create_chunkdata/: down.sql  up.sql
apps/main/src-tauri/migrations/2026-04-06-000000_add_sync_tables/: down.sql  up.sql
apps/main/src-tauri/migrations/2026-04-18-000000_add_bookmarks/: up.sql
apps/main/src-tauri/src/: api.rs  commands.rs  db.rs  djvu.rs  embed.rs  epub.rs  error_dump.rs  lib.rs  llm.rs  local_scanner.rs  main.rs  mobi.rs  models.rs  pdf.rs  schema.rs  speach.rs  sql.rs  test_fixtures.rs  test_helpers.rs  user.rs  vectordb.rs
apps/main/src-tauri/src/shared/: books.rs  mod.rs  types.rs
apps/main/src-tauri/test_data/: 1-vectordb.hnsw.data  1-vectordb.hnsw.graph  998-vectordb.hnsw.data  998-vectordb.hnsw.graph  test.db  test_0.db  test_1.db  test_rishi.db
apps/main/src-tauri/tests/: README.md  helpers.rs
apps/mobile/: .env  app.json  babel.config.js  drizzle.config.ts  jest.config.js  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+497 files in other folders)
