[package]
name = "rishi"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.release]
lto = false
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rishi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-typegen = "0.3.2"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.89"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
zip = "6.0.0"
tauri-plugin-http = "2"
xml-rs = "0.8.26"
percent-encoding = "2.3.1"
thiserror = "2.0.12"
epub = "2.1.5"
tauri-plugin-store = "2"
md5 = "0.8.0"
pdf = "0.9.0"
flate2 = "1.1.5"
image = "0.24"
tauri-plugin-deep-link = "2"
tauri-plugin-os = "2.0.0"
embed_anything = "0.6.5"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
hnsw_rs = "0.3.3"
anyhow = "1.0.100"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.3.4", features = ["sqlite", "serde_json", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2.3.1"
r2d2 = "0.8.10"
reqwest = "0.12.24"
wav_io = "0.1.15"
cpal = "0.16.0"
tauri-plugin-mic-recorder = "2.0.0"
webrtc-audio-processing = { version = "0.5.0", features = ["bundled"] }
uuid = { version = "1.19.0", features = ["v4"] }
sentry = {version = "0.42",  features = ["logs"] }
tauri-plugin-sentry = "0.5"



# sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }

[dev-dependencies]
tempfile = "3.8"
expectest = "0.12"
pretty_assertions = "1.4"
expect-test = "1.4"
speculate = "0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

